[package]
name = "stepbystep-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
futures = "0.3.17"
quote = "1.0"
stepbystep-export = { version = "0.1.0", path = "../stepbystep-export"}

[lib]
crate-type = ["staticlib"]
